# mapox

./: LICENSE  README.md  main.py  pyproject.toml
docs/: soccer.md
docs/wiki/: find_return.html  index.html  king_hill.html  scouts.html  soccer.html  stealth.html  style.css  traveling_salesman.html
mapox/: __init__.py  agent.py  client.py  config.py  environment.py  map_generator.py  map_loader.py  play.py  renderer.py  specs.py  timestep.py
mapox/envs/: constance.py  embodied_comm.py  find_return.py  king_hill.py  prey.py  scouts.py  soccer.py  stealth.py  traveling_salesman.py
mapox/utils/: video_writer.py
mapox/wrappers/: multitask.py  task_id_wrapper.py  vector.py
tests/: conftest.py  test_action_mask.py  test_concat_one_hot.py  test_embodied_comm.py  test_env_contract.py  test_jit_compat.py  test_map_generator.py  test_map_loader.py  test_multitask_wrapper.py  test_vector_wrapper.py
tests/fixtures/: test_map.json
