[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mapox"
version = "0.1.1"
description = "Multi-Agent Partially Observable gridworlds in JAX"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gabriel Keith", email = "gfk1995@gmail.com" }
]
keywords = ["reinforcement-learning", "jax", "multi-agent", "gridworld", "pomdp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "einops>=0.8.1",
    "jax>=0.7.2",
    "pydantic>=2.12.5",
    "pygame-ce>=2.5.6",
    "python-ffmpeg>=2.0.12",
]

[project.urls]
Homepage = "https://github.com/gabe00122/mapox"
Repository = "https://github.com/gabe00122/mapox"
Issues = "https://github.com/gabe00122/mapox/issues"

[tool.hatch.build.targets.wheel]
packages = ["mapox"]
